# cpp-opengl-bluemarble

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  main.cpp
src/shaders/: triangle_frag.glsl  triangle_vertex.glsl
